--- a/style.css
+++ b/style.css
@@ -181,3 +181,12 @@ button {
 .cta-card div {
     margin-left: 5vw;
 }
+
+.footer {
+    display: flex;
+    background-color: #1F2937;
+    color: #e5e7eb;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+}
